<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:padding="7dp">

			<TextView android:id="@+id/textPrincipal" android:textStyle="bold"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/nuevaDosisTitulo" android:gravity="center_horizontal"
				android:textSize="23sp" android:textColor="@color/titlecolor">
			</TextView>

			<TextView android:text="@string/Medicamento"
				android:textSize="20sp" android:textColor="@color/titlecolor"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/TextViewMedicamento"></TextView>

			<Spinner android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:drawSelectorOnTop="true"
				android:id="@+id/spinnerMedicamento" />

			<TextView android:text="@string/FechaInicio"
				android:textSize="20sp" android:textColor="@color/titlecolor"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/TextViewFechaInicio"></TextView>
			<DatePicker android:id="@+id/datePickerFechaInicio" android:layout_gravity="center_horizontal"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>

			<TextView android:text="@string/HoraInicio"
				android:textSize="20px" android:textColor="@color/titlecolor"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/TextViewHoraInicio"></TextView>
			<TimePicker android:id="@+id/timePickerHoraInicio" android:layout_gravity="center_horizontal"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></TimePicker>

			<TextView android:text="@string/Cantidad" android:textSize="20sp"
				android:textColor="@color/titlecolor" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/TextViewCantidad"></TextView>
			<EditText android:id="@+id/EditTextCantidad"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:numeric="integer"></EditText>

			<TextView android:text="@string/Dias" android:textSize="20sp"
				android:textColor="@color/titlecolor" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/TextViewDias"></TextView>
			<EditText android:id="@+id/EditTextDias"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:numeric="integer"></EditText>

			<TextView android:text="@string/Repeticion"
				android:textColor="@color/titlecolor" android:id="@+id/TextViewRepeticion"
				android:textSize="20sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
			<EditText android:id="@+id/EditTextRepeticion"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:numeric="integer"></EditText>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<Button android:id="@+id/Button01" android:text="@string/Agregar"
					android:textStyle="bold" android:textColor="@color/titlecolor"
					android:layout_width="wrap_content" android:layout_height="fill_parent"
					android:layout_weight="1" android:onClick="Aceptar" />

				<Button android:id="@+id/Button02" android:text="@string/Cancelar"
					android:textStyle="bold" android:textColor="@color/titlecolor"
					android:layout_width="wrap_content" android:layout_height="fill_parent"
					android:layout_weight="1" android:onClick="Cancelar" />
			</LinearLayout>

		</LinearLayout>
	</ScrollView>

</LinearLayout>